# vkcompute

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  fragment_shader.frag  main.cpp  vertex_shader.vert
include/: application.h  matrix.hpp
include/application/: vulkan_context.h  vulkan_error.h  window.h
src/: application.cpp  main.cpp
src/application/: vulkan_error.cpp  window.cpp
src/platform_linux/: platform_linux.cpp
src/platform_macos/: platform_macos.mm
